# AgenteIACAP

./: .env.example  .funcignore  .gitignore  Casos de prueba.xlsx  Datos_Sap.xlsx  Pruebas - Pedido devolución retenciones - 27032025.xlsx  Pruebas -12-03 - copia.xlsx  Pruebas -13-03-Resultados.xlsx  README.md  ejemplo_carta_modelo.txt  email_classifier.pkl  environment.yml  excel_cpy.py  freeze.txt  function_app.py  langgraph.json  logs.txt  pdfs_base64.json  pyproject copy.toml  pyproject.toml  requirements copy.txt  requirements.txt  response.json  tfidf_vectorizer.pkl
.langgraph_api/: .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agentiacap/: Tareas semanales.txt
app/: Casos categorizados-Nueva estructura.json  Casos categorizados.json  Casos categorizados.xlsx  Casos_resultados.xlsx  Casos_resultados_executor_4o-mini.xlsx  Casos_resultados_graph_4o-mini.xlsx  Casos_resultados_graph_4o.xlsx  Prompt_Template.py  agent.py  agentCleaner.py  agentGraph.py  api.py  armar_json.py  cambiar_estructura_json.py  categorizar_emails.py  excel_cmp.py  test-embedding.py  test-graph.py  test-graphCleaner.py  testAgentFile.py  tokenizer.py
tests/: Casos - Extracción.xlsx  Casos - Extracción_resultados.xlsx  Casos - Extracción_resultados_03022025.xlsx  Casos - Extracción_resultados_300125.xlsx  Casos - Extracción_resultados_310125.xlsx  Casos categorizados - Extracción - 310125_categorizados.xlsx  Casos.xlsx  caso.json  caso_sap.json  mail.html  response.html  response.json  response_carta_modelo.json  response_sap.json  test-Clasificación.py  (+10 more)
(+75 files in other folders)
